syntax = "proto3";
package Lab.Global;

import "lab_protobuf/global/decimal.proto";
import "lab_protobuf/global/currency_code.proto";

message Money {
  Decimal amount                  = 1;
  CurrencyCodeValue currency_code = 2;
}
